fixed wrong SortOrder, implemented RessOverview

--- a/html/overview.html
+++ b/html/overview.html
@@ -125,6 +125,10 @@
                         <option id="LvLOff">LvLOff</option>
                         <option id="LvLDef">LvLDef</option>
                         <option id="LvLSup">LvLSup</option>
+                        <option id="Tib" value="Tib">Tiberium</option>
+                        <option id="Cry" value="Cry">Crystal</option>
+                        <option id="Pow" value="Pow">Power</option>
+                        <option id="Cre" value="Cre">Credits</option>
                     </select><br/><br/>
                     <div style="overflow-x: auto;">
                         <table id="TableAllianceBase" border="1px">
