preview MovableCnCOpt on mouseover and fixed on click

--- a/html/overview.html
+++ b/html/overview.html
@@ -138,28 +138,52 @@
                             <tbody id="TableAllianceBaseTbody"></tbody>
                         </table>
                     </div><br/><br/>
-                    <div class="card" style="max-width: 996px;">
+                    <div id="FixedCnCOpt" class="card" style="width: 996px;">
                         <div class="card-header">
                             <span id="HeaderCnCOptLink"></span>
                         </div>
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-lg">
-                                    <table id="TableAllianceBaseBuildCnCOpt" border="1px">
+                                    <table id="FixedBuildCnCOpt" border="1px">
                                         <thead></thead>
-                                        <tbody id="TableAllianceBaseBuildCnCOptTbody"></tbody>
+                                        <tbody id="FixedBuildCnCOptTbody"></tbody>
                                     </table>
                                 </div>
                                 <div class="col-lg">
-                                    <table id="TableAllianceBaseDefCnCOpt" border="1px">
+                                    <table id="FixedDefCnCOpt" border="1px">
                                         <thead></thead>
-                                        <tbody id="TableAllianceBaseDefCnCOptTbody"></tbody>
+                                        <tbody id="FixedDefCnCOptTbody"></tbody>
                                     </table>
                                 </div>
                                 <div class="col-lg">
-                                    <table id="TableAllianceBaseOffCnCOpt" border="1px">
+                                    <table id="FixedOffCnCOpt" border="1px">
                                         <thead></thead>
-                                        <tbody id="TableAllianceBaseOffCnCOptTbody"></tbody>
+                                        <tbody id="FixedOffCnCOptTbody"></tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="MovableCnCOpt" class="card" style="width: 996px;">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-lg">
+                                    <table id="MovableBuildCnCOpt" border="1px">
+                                        <thead></thead>
+                                        <tbody id="MovableBuildCnCOptTbody"></tbody>
+                                    </table>
+                                </div>
+                                <div class="col-lg">
+                                    <table id="MovableDefCnCOpt" border="1px">
+                                        <thead></thead>
+                                        <tbody id="MovableDefCnCOptTbody"></tbody>
+                                    </table>
+                                </div>
+                                <div class="col-lg">
+                                    <table id="MovableOffCnCOpt" border="1px">
+                                        <thead></thead>
+                                        <tbody id="MovableOffCnCOptTbody"></tbody>
                                     </table>
                                 </div>
                             </div>
