--- a/html/overview.html
+++ b/html/overview.html
@@ -138,52 +138,28 @@
                             <tbody id="TableAllianceBaseTbody"></tbody>
                         </table>
                     </div><br/><br/>
-                    <div id="FixedCnCOpt" class="card" style="width: 996px;">
+                    <div class="card" style="max-width: 996px;">
                         <div class="card-header">
                             <span id="HeaderCnCOptLink"></span>
                         </div>
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-lg">
-                                    <table id="FixedBuildCnCOpt" border="1px">
+                                    <table id="TableAllianceBaseBuildCnCOpt" border="1px">
                                         <thead></thead>
-                                        <tbody id="FixedBuildCnCOptTbody"></tbody>
+                                        <tbody id="TableAllianceBaseBuildCnCOptTbody"></tbody>
                                     </table>
                                 </div>
                                 <div class="col-lg">
-                                    <table id="FixedDefCnCOpt" border="1px">
+                                    <table id="TableAllianceBaseDefCnCOpt" border="1px">
                                         <thead></thead>
-                                        <tbody id="FixedDefCnCOptTbody"></tbody>
+                                        <tbody id="TableAllianceBaseDefCnCOptTbody"></tbody>
                                     </table>
                                 </div>
                                 <div class="col-lg">
-                                    <table id="FixedOffCnCOpt" border="1px">
+                                    <table id="TableAllianceBaseOffCnCOpt" border="1px">
                                         <thead></thead>
-                                        <tbody id="FixedOffCnCOptTbody"></tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="MovableCnCOpt" class="card" style="width: 996px;">
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-lg">
-                                    <table id="MovableBuildCnCOpt" border="1px">
-                                        <thead></thead>
-                                        <tbody id="MovableBuildCnCOptTbody"></tbody>
-                                    </table>
-                                </div>
-                                <div class="col-lg">
-                                    <table id="MovableDefCnCOpt" border="1px">
-                                        <thead></thead>
-                                        <tbody id="MovableDefCnCOptTbody"></tbody>
-                                    </table>
-                                </div>
-                                <div class="col-lg">
-                                    <table id="MovableOffCnCOpt" border="1px">
-                                        <thead></thead>
-                                        <tbody id="MovableOffCnCOptTbody"></tbody>
+                                        <tbody id="TableAllianceBaseOffCnCOptTbody"></tbody>
                                     </table>
                                 </div>
                             </div>
