picture now from origin-source

--- a/html/overview.html
+++ b/html/overview.html
@@ -14,15 +14,15 @@
         <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script> <!-- DataTable -->
         <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script> <!-- DataTable -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/alasql/0.4.5/alasql.min.js"></script> <!-- alasql -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.12.13/xlsx.core.min.js"></script> <!-- .xlsx-Export -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.13.0/xlsx.core.min.js"></script> <!-- .xlsx-Export -->
         <script src="https://www.gstatic.com/charts/loader.js"></script> <!-- GoogleChart -->      
-		<script src="js/overview.js"></script> <!-- alles eigene -->
+		<script src="js/overview.js?20180603"></script> <!-- alles eigene -->
 
 		<!-- CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"> <!-- Bootstrap -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"> <!-- FontAwesome -->
         <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css"> <!-- DataTable -->
-		<link rel="stylesheet" href="css/own.css"> <!-- alles eigene -->
+		<link rel="stylesheet" href="css/own.css?20180603"> <!-- alles eigene -->
 	</head>
 	<body>
         <div class="jumbotron text-center">
