--- a/html/login.html
+++ b/html/login.html
@@ -11,12 +11,12 @@
 		<!-- JavaScript -->
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script> <!-- jQuery -->
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script> <!-- Bootstrap -->
-		<script src="js/login.js"></script> <!-- alles eigene -->
+		<script src="js/login.js?20180603"></script> <!-- alles eigene -->
 
 		<!-- CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"> <!-- Bootstrap -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"> <!-- FontAwesome -->
-		<link rel="stylesheet" href="css/own.css"> <!-- alles eigene -->
+		<link rel="stylesheet" href="css/own.css?20180603"> <!-- alles eigene -->
 	</head>
 	<body>
         <div class="jumbotron text-center">
