--- a/html/overview.html
+++ b/html/overview.html
@@ -10,7 +10,7 @@
         <!-- CSS -->
         <link rel="stylesheet" href="https://cdn.rawgit.com/olton/Metro-UI-CSS/6595247250e80f27c590e9ba89522f1676a8297d/build/css/metro-all.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
-        <link rel="stylesheet" href="css/own.css?20180810">
+        <link rel="stylesheet" href="css/own.css?20180818">
 
         <!-- JavaScript -->
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -19,13 +19,14 @@
         <script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
         <script src="https://www.amcharts.com/lib/3/serial.js"></script>
         <script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
-        <script src="js/cookies.js?20180810"></script>
-        <script src="js/languages.js?20180810"></script>
-        <script src="js/backend.js?20180810"></script>
-        <script src="js/dropdowns.js?20180810"></script>
-        <script src="js/tabsNavigation.js?20180810"></script>
-        <script src="js/tabsContent.js?20180810"></script>
-        <script src="js/overview.js?20180810"></script>
+        <script src="js/cookies.js?20180818"></script>
+        <script src="js/languages.js?20180818"></script>
+        <script src="js/backend.js?20180818"></script>
+        <script src="js/dropdowns.js?20180818"></script>
+        <script src="js/tabsNavigation.js?20180818"></script>
+        <script src="js/tabsContent.js?20180818"></script>
+        <script src="js/charts.js?20180818"></script>
+        <script src="js/overview.js?20180818"></script>
     </head>
     <body>
         <div class="container-fluid text-center own-container">
@@ -77,7 +78,7 @@
                     </div>
                 </div>
                 <div id="ContentPlayer">
-                    <div id="ChartPlayer-ScorePoints" class="own-chart"></div><br/>
+                    <div id="ChartPlayerScorePoints" class="own-chart"></div><br/>
                 </div>
             </div>
             <!-- for charts -->
