completed charts on first player-tab

--- a/html/overview.html
+++ b/html/overview.html
@@ -78,7 +78,15 @@
                     </div>
                 </div>
                 <div id="ContentPlayer">
+                    <center><span id="LoadingSymbolPagePlayer" class="fas fa-sync fa-spin fa-6x"></span></center>
                     <div id="ChartPlayerScorePoints" class="own-chart"></div><br/>
+                    <div id="ChartPlayerRanking" class="own-chart"></div><br/>
+                    <div id="ChartPlayerProduction" class="own-chart"></div><br/>
+                    <div id="ChartPlayerRpsCredits" class="own-chart"></div><br/>
+                    <div id="ChartPlayerShoots" class="own-chart"></div><br/>
+                    <div id="ChartPlayerValues" class="own-chart"></div><br/>
+                    <div id="ChartPlayerCps" class="own-chart"></div><br/>
+                    <div id="ChartPlayerFunds" class="own-chart"></div><br/>
                 </div>
             </div>
             <!-- for charts -->
