--- a/html/overview.html
+++ b/html/overview.html
@@ -47,7 +47,7 @@
                 <li id="LiPlayerBase"><a id="TabPlayerBase" href="#ContentPlayerBase" onclick="prepareTabPlayerBase();"><span class="fas fa-street-view"></span>&nbsp;Player - Bases</a></li>
                 <li id="LiAllianceMembers"><a id="TabAllianceMembers" href="#ContentAllianceMembers" onclick="prepareTabAllianceMembers();"><span class="mif-users"></span> Members</a></li>
                 <li id="LiAlliance"><a id="TabAlliance" href="#ContentAlliance" onclick="prepareTabAlliance();"><span class="fas fa-users"></span>&nbsp;Alliance</a></li>
-                <li id="LiAllianceBases"><a id="TabAllianceBases" href="#ContentAllianceBases" onclick="prepareTabAllianceBases();"><span class="mif-home"></span> Alliance - Bases</a></li>
+                <li id="LiAllianceBase"><a id="TabAllianceBase" href="#ContentAllianceBase" onclick="prepareTabAllianceBase();"><span class="mif-home"></span> Alliance - Bases</a></li>
                 <li id="LiAllianceOverview"><a id="TabAllianceOverview" href="#ContentAllianceOverview" onclick="prepareTabAllianceOverview();"><span class="mif-eye"></span> Alliance - Overview</a></li>
                 <li id="LiBase"><a id="TabBase" href="#ContentBase" onclick="prepareTabBase();"><span class="mif-home"></span> Base</a></li>
                 <li id="LiWorldOverview"><a id="TabWorldOverview" href="#ContentWorldOverview" onclick="prepareTabWorldOverview();"><span class="mif-vpn-publ"></span> World - Overview</a></li>
